--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -1,6 +1,6 @@
 <div class="thankyou">
     <p>
-        thank you, {{currentFirst}} {{currentLast}}, for signing my petition!
+        thank you, {{results.rows.[0].first}} {{results.rows.[0].last}}, for signing my petition!
     </p>
     <div class="container">
         <p>want to see who else signed so far?</p>
