--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,8 @@
             <input type='text' required name='firstname' placeholder='First Name' autocomplete='off'>
             <input type='text' required name='lastname' placeholder='Last Name' autocomplete='off'>            
             <div>
-                <input type="checkbox" name="subscribe"><span>Please check this box to add your acceptance</span>
+                <input type='text' required name='signature' placeholder='place sign here' autocomplete='off'>            
+                {{!-- <input type="checkbox" name="subscribe"><span>Please check this box to add your acceptance</span> --}}
             </div>
             <button> submit </submit>
         </form>
