--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -1,7 +1,11 @@
 <div class="thankyou">
+    {{#rows}}
     <p>
-        thank you, {{results.rows.[0].first}} {{results.rows.[0].last}}, for signing my petition!
+        {{!-- thank you, {{results.rows.[0].first}} {{results.rows.[0].last}}, for signing my petition! --}}
+        thank you, {{first}} {{last}}, for signing my petition! 
     </p>
+    {{/rows}}    
+    <p>{{numberOfSigners}}</p>
     <div class="container">
         <p>want to see who else signed so far?</p>
         <p>click the button to find out...</p>
