--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,21 +1,19 @@
 <div class="home">
     <h1>Please sign up for my petition!</h1>
-    <div class="container">
-            {{#if unfilled}}
-                <h3 style="color:red">make sure your form is complete!</h3>
-            {{/if}}
+    <div class="container">            
         <form method='POST'>
             <input type='text' name='firstname' placeholder='First Name' autocomplete='off'>
             <input type='text' name='lastname' placeholder='Last Name' autocomplete='off'>            
             <div>
-                {{!-- <input type='text' name='signature' placeholder='place sign here' autocomplete='off'>             --}}
-                {{!-- <input type="checkbox" name="subscribe"><span>Please check this box to add your acceptance</span> --}}
                 <input type="hidden" name="signature">
                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                 {{!-- maybe put the csrf in partial --}}
                 <canvas id="canvas"></canvas>
             </div>
-            <button> submit </submit>
+            <button> submit </button>
         </form>
+        {{#if unfilled}}
+            {{>par-unfilled}}
+        {{/if}}
     </div>
 </div>
