--- a/views/partials/par-unfilled.handlebars
+++ b/views/partials/par-unfilled.handlebars
@@ -1,1 +1,4 @@
-<h3 style="color:tomato;padding:50px">make sure your form is complete!</h3>
+<div class="partial unfilled">
+    <h3>make sure your form is complete!</h3>
+    <a href="/">try again</a>
+</div>
