--- a/views/signerslist.handlebars
+++ b/views/signerslist.handlebars
@@ -4,6 +4,7 @@
         <div>
             {{#rows}}
                 <h2>{{first}} {{last}}</h2>
+                {{!-- <h3>{{first}} {{last}} at {{created}}</h3> --}}
             {{/rows}}   
         </div>
     </div>
