--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,8 @@
                 <input type="hidden" name="signature">
                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                 {{!-- maybe put the csrf in partial --}}
-                <canvas id="canvas"></canvas>
+                <canvas id="canvas" width="400" height="100"></canvas></canvas>
+
             </div>
             <button> submit </button>
         </form>
