--- a/views/signerslist.handlebars
+++ b/views/signerslist.handlebars
@@ -4,7 +4,7 @@
         <div>
             {{#rows}}
                 <h2>{{first}} {{last}}</h2>
-                {{!-- <h3>{{first}} {{last}} at {{created}}</h3> --}}
+                <p>at {{created}}</p>
             {{/rows}}   
         </div>
     </div>
