--- a/views/partials/par-fill_err.handlebars
+++ b/views/partials/par-fill_err.handlebars
@@ -1,4 +1,4 @@
 <div class="partial unfilled">
     <h3>make sure your form is complete!</h3>
-    <a href="/">try again</a>
+    <a href="/register">try again</a>
 </div>
