--- a/public/style.css
+++ b/public/style.css
@@ -57,7 +57,9 @@ a {
 
 .home,
 .signers,
-.thankyou {
+.thankyou,
+.login,
+.register {
     height: 70vh;
     display: flex;
     flex-direction: column;
