--- a/views/signerslist.handlebars
+++ b/views/signerslist.handlebars
@@ -4,7 +4,7 @@
         <div>
             {{#rows}}
                 <h2>{{first}} {{last}}</h2>
-                <p>at {{created}}</p>
+                <p>at {{created_at}}</p>
             {{/rows}}   
         </div>
     </div>
