--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,7 +7,7 @@
                 <input type='password' name='password' placeholder='Password' autocomplete='off'>            
                 {{>csrf}}
             </div>
-            <button> log in! </button>
+            <button type="submit">log in</button>
         </form>
         <p>not yet registered? then please go ahead and <a href="/register">register</a></p>
         {{#if fill_err}}
