--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,15 +1,15 @@
 <div class="register">
-    <h1>register a new user</h1>
+    <h2>register to my petition!</h2>
     <div class="container">            
         <form method='POST'>
-            <div>
+            {{!-- <div> --}}
                 <input type='text' name='firstname' placeholder='First Name' autocomplete='off'>
                 <input type='text' name='lastname' placeholder='Last Name' autocomplete='off'>
                 <input type='email' name='email' placeholder='Email Address' autocomplete='off'>
                 <input type='password' name='password' placeholder='Password' autocomplete='off'>            
                 {{>csrf}}
-            </div>
-            <button> register now! </button>
+            {{!-- </div> --}}
+            <button type="submit">register now</button>
         </form>
         <p>already registered? then please <a href="/login">log in</a></p>
         {{#if fill_err}}
