--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -4,11 +4,11 @@
         thank you, {{first}} {{last}}, for signing my petition! 
     </h2>
     <p>with your signature below, you are a registered signer of my petition!</p>
-    <img id="signature" src="{{signature}}" alt="signature">
     {{/rows}}    
+    <img id="signature" src="{{signature}}" alt="signature">
     <div class="container">
     <p>want to see the other {{numberOfSigners}} people who signed this petition?<br>
         then click the below to find out...</p>
-        <a href="/signerslist" id="listBtn">signers list</a>
+        <a href="/signerslist" class="myBtn">signers list</a>
     </div>
 </div>
