--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -13,8 +13,8 @@
             </div>
             <button type="submit">sign up</button>
         </form>
-        {{#if fill_err}}
-            {{>par-signature_err}}
+        {{#if err}}
+            {{>errors}}
         {{/if}}
     </div>
 </div>
