--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
         {{{body}}}
     </div>
     <footer>
-        <p>This website was built entirely with PostgreSQL, bcryptjs, redis and express handlbares templates</p>
+        <p>This website was built entirely with PostgreSQL and express handlbares templates</p>
         <a href="mailto:webdev@arielmoatti.com" target="_blank">email me: webdev@arielmoatti.com</a>
         <p>© Ariel Moatti 2020</p>
     </footer>
