--- a/views/signerslist.handlebars
+++ b/views/signerslist.handlebars
@@ -5,7 +5,7 @@
             {{#rows}}
                 <h2>
                     {{#if url}}
-                        <a href="{{url}}">{{first}} {{last}}</a>
+                        <a href="{{url}}" target="blank">{{first}} {{last}}</a>
                     {{else}}
                         <span>{{first}} {{last}}</span>
                     {{/if}}
