PART5 v1.5, laptop sync

--- a/views/partials/errors.handlebars
+++ b/views/partials/errors.handlebars
@@ -1,4 +1,4 @@
 <div class="errModal">
     <h3>{{err}}</h3>
-    <a class="errModalBtn" href="javascript://">{{btn}}</a>
+    <a class="errModalBtn" href="{{href}}">{{btn}}</a>
 </div>
