--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,7 +1,7 @@
 <div class="home">
     {{#rows}}
-        <h2>Welcome back, {{first}}!</h2>
-        <h3>Looks likes you haven't yet signed the petition</h3>
+        <h2>Hello, {{first}}!</h2>
+        <h3>Looks likes you haven't yet signed the petition...</h3>
     {{/rows}}
     <h2>If you agree, please sign your name</h2>
     <div class="container">            
