--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,9 +6,9 @@
             <input type='text' name='city' placeholder='City' autocomplete='off'>
             <input type='text' name='url' placeholder='Website' autocomplete='off'>
             {{>csrf}}
-            <button type="submit">submit</button>
+            <button type="submit">continue</button>
         </form>
-        <a href="/petition" class="myBtn skip">skip for now</a>
+        {{!-- <a href="/petition" class="myBtn skip">skip for now</a> --}}
         {{#if err}}
             {{>errors}}
         {{/if}}
