--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,13 +14,13 @@
             <h1>Petition Project</h1>
         </a>
         <p>Spiced Academy - coding bootcamp in Berlin </p>
+        <a href="/logout" class="myBtn headerBtn">logout</a>
     </header>
     <div id="content-wrap">
         {{{body}}}
     </div>
     <footer>
-        <p>This website was built entirely with PostgreSQL and express handlbares templates</p>
-        <a href="mailto:webdev@arielmoatti.com" target="_blank">email me: webdev@arielmoatti.com</a>
+        <p>This website was built entirely with PostgreSQL and express handlbares templates</p>        
         <p>© Ariel Moatti 2020</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
