--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -13,8 +13,8 @@
             </div>
             <button type="submit">sign up</button>
         </form>
-        {{#if err}}
-            {{>errors}}
+        {{#if message}}
+            {{>msgBox}}
         {{/if}}
     </div>
 </div>
