--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,8 +9,8 @@
             <button type="submit">continue</button>
         </form>
         {{!-- <a href="/petition" class="myBtn skip">skip for now</a> --}}
-        {{#if err}}
-            {{>errors}}
+        {{#if message}}
+            {{>msgBox}}
         {{/if}}
     </div>
 </div>
