--- a/views/signerslist.handlebars
+++ b/views/signerslist.handlebars
@@ -3,7 +3,7 @@
     <div class="container">
         <div>
             {{#rows}}
-                <h2>
+                <h2 class="signerList">
                     {{#if url}}
                         <a href="{{url}}" target="_blank">{{first}} {{last}}</a>
                     {{else}}
