--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@ footer {
     background-color: #22241f;
     color: #ccc5b9;
     text-align: center;
-    padding: 15px 0px;
+    padding: 5px 0px;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -104,6 +104,7 @@ button[type="submit"] {
     font-family: "Montserrat", sans-serif;
     font-size: 18px;
     padding: 0.5rem;
+    margin: 10px;
     background-color: #22241f;
     align-self: center;
     color: #ccc5b9;
@@ -118,8 +119,10 @@ button[type="submit"]:hover {
     transition: 400ms ease-in-out;
 }
 
-.skip {
-    align-self: flex-end;
+.headerBtn {
+    position: absolute;
+    top: 15px;
+    right: 50px;
 }
 
 canvas {
@@ -130,7 +133,7 @@ canvas {
 }
 
 /* .partial, */
-.errModal {
+.modal {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -150,12 +153,12 @@ canvas {
     box-shadow: 5px 5px 10px #000000;
 }
 
-.errModal h3 {
+.modal h3 {
     color: tomato;
     /* padding: 1rem; */
 }
 
-.errModal a {
+.modal a {
     padding: 0.5rem;
     margin-top: 3rem;
     background-color: tomato;
@@ -164,7 +167,7 @@ canvas {
     border-radius: 5px;
 }
 
-.errModal a:hover {
+.modal a:hover {
     background-color: grey;
     color: black;
     transition: 400ms;
@@ -201,4 +204,13 @@ input {
 input:-webkit-autofill {
     -webkit-transition: "color 9999s ease-out, background-color 9999s ease-out";
     -webkit-transition-delay: 9999s;
+}
+
+.signerList {
+    transform: scale(1);
+    transition: 200ms;
+}
+
+.signerList:hover {
+    transform: scale(1.1);
 }
