--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -10,5 +10,6 @@
     <p>want to see the other {{numberOfSigners}} people who signed this petition?<br>
         then click the below to find out...</p>
         <a href="/signerslist" class="myBtn">signers list</a>
+        <a href="/profile/update" class="myBtn">update profile</a>
     </div>
 </div>
