--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -14,8 +14,8 @@
                 {{>csrf}}
             <button type="submit">update</button>
         </form>        
-        {{#if err}}
-            {{>errors}}
+        {{#if message}}
+            {{>msgBox}}
         {{/if}}
     </div>
 </div>
