--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,8 @@
             <h1>Petition Project</h1>
         </a>
         <p>Spiced Academy - coding bootcamp in Berlin </p>
-        <a href="/logout" class="myBtn headerBtn">logout</a>
+        {{!-- <a href="/logout" class="myBtn headerBtn">logout</a> --}}
+        
     </header>
     <div id="content-wrap">
         {{{body}}}
