--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,3 +1,4 @@
+{{>cornerBtn logged=true}}
 <div class="profile">
     <h2>Please provide some personal information</h2>
     <div class="container">            
