--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,3 +1,4 @@
+{{>cornerBtn register=true}}
 <div class="register">
     <h2>register to my petition!</h2>
     <div class="container">            
