--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,3 +1,4 @@
+{{>cornerBtn logged=true}}
 <div class="update">
     <h2>here you can update your profile</h2>
     <div class="container">            
