--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,12 +10,10 @@
 </head>
 <body>
     <header>
-        <a href="/">            
-            <h1>Petition Project</h1>
+        <a class="link" href="/">            
+            <h1>We Need More Cowbell</h1>
         </a>
-        <p>Spiced Academy - coding bootcamp in Berlin </p>
-        {{!-- <a href="/logout" class="myBtn headerBtn">logout</a> --}}
-        
+        <p>the official petition</p>        
     </header>
     <div id="content-wrap">
         {{{body}}}
