--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 {{>cornerBtn login=true}}
 <div class="login">
-    <h1>existing user log in</h1>
+    <h2>welcome back! please log in</h2>
     <div class="container">            
         <form method='POST'>
             <input type='email' name='email' placeholder='Email Address' autocomplete='off'>
@@ -8,7 +8,7 @@
             {{>csrf}}
             <button type="submit">log in</button>
         </form>
-        <p>not yet registered? then please go ahead and <a href="/register">register</a></p>
+        <p>not yet registered? then please go ahead and <a class="link" href="/register">register now</a></p>
         {{#if message}}
             {{>msgBox}}
         {{/if}}
