--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,7 @@
 {{>cornerBtn logged=true}}
 <div class="profile">
-    <h2>Please provide some personal information</h2>
+    <h2>please provide some personal information</h2>
+    <h3>webite: your homepage or any favourite address</h3>
     <div class="container">            
         <form method='POST'>
             <input type='text' name='age' placeholder='Age' autocomplete='off'>
@@ -9,7 +10,6 @@
             {{>csrf}}
             <button type="submit">continue</button>
         </form>
-        {{!-- <a href="/petition" class="myBtn skip">skip for now</a> --}}
         {{#if message}}
             {{>msgBox}}
         {{/if}}
