--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,9 +11,9 @@
 <body>
     <header>
         <a class="link" href="/">            
-            <h1>We Need More Cowbell</h1>
+            <h1>We Need More Cowbell!</h1>
         </a>
-        <p>the official petition</p>        
+        <p>the unofficial petition</p>        
     </header>
     <div id="content-wrap">
         {{{body}}}
