--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -2,6 +2,8 @@
 <div class="home">
     {{#rows}}
         <h2>Welcome, {{first}}!</h2>
+        <p>Cowbell... what a lovely sound... We definitely need more of it!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi omnis numquam veritatis tempora recusandae. Consequatur odit debitis libero nesciunt! Inventore expedita porro repellat consequatur nihil, rerum exercitationem eveniet atque reiciendis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quas quia repellat consequuntur commodi? Ut explicabo, cupiditate facere corporis voluptates temporibus in unde nobis blanditiis quo provident odio distinctio? Quas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae omnis dolor delectus neque ut praesentium a perferendis asperiores explicabo quidem qui exercitationem quibusdam enim, repellendus deserunt impedit corporis quam in!</p>
         <h3>Looks likes you haven't yet signed the petition...</h3>
     {{/rows}}
     <h2>If you support my cause, please sign your name using the mouse</h2>
