--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,9 +10,7 @@
 </head>
 <body>
     <header>
-        <a class="link" href="/">            
-            <h1>We Need More Cowbell!</h1>
-        </a>
+        <a class="link" href="/">We Need More Cowbell!</a>
         <p>the unofficial petition</p>        
     </header>
     <div id="content-wrap">
