city render complete, including capitalization

--- a/public/style.css
+++ b/public/style.css
@@ -57,7 +57,8 @@ a {
 .login,
 .register,
 .profile,
-.update {
+.update,
+.cities {
     height: 80vh;
     display: flex;
     flex-direction: column;
