--- a/views/cities.handlebars
+++ b/views/cities.handlebars
@@ -1,9 +1,9 @@
 {{>cornerBtn logged=true}}
 <div class="cities">
+        <h1>supporters from {{titleCity}} who need more cowbell:</h1>
     <div class="container">
         <div>
             {{#rows}}
-                <h1>supporters from {{city}} who need more cowbell:</h1>
                 <h2 class="signerList">
                     {{#if url}}
                         <a class="link" href="{{url}}" target="_blank">{{first}} {{last}}</a>
