city capitalization with function

--- a/views/cities.handlebars
+++ b/views/cities.handlebars
@@ -1,6 +1,6 @@
 {{>cornerBtn logged=true}}
 <div class="cities">
-        <h1>supporters from {{titleCity}} who need more cowbell:</h1>
+        <h1>supporters from {{city}} who need more cowbell:</h1>
     <div class="container">
         <div>
             {{#rows}}
